<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Folio</string>
    <string name="app_name_pro">Folio Pro</string>
    <string name="app_name_toolbar">Folio</string>
    <string name="app_name_toolbar_pro">Folio Pro</string>
    <string name="app_name_about">Folio for Facebook</string>
    <string name="app_name_about_pro">Folio for Facebook Pro</string>
    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Open Left Drawer</string>
    <string name="facebook_app_id">749196541804006</string>
    <string name="get_started">Log In With Facebook</string>
    <string name="status_updated">Status updated.</string>
    <string name="loading_video">Loading.</string>
    <string name="ok">OK</string>
    <string name="tap_to_set">Tap To Apply Changes</string>
    <string name="send_feedback">Folio Feedback</string>
    <string name="applying_changes">Clearing cache. Relaunch Folio.</string>
    <string name="cancel">Cancel</string>
    <string name="choose_email_client">Choose e-mail client</string>
    <string name="no_network">You\'re not online.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="preference_about_category">About</string>
    <string name="preference_set_category">All Set?</string>
    <string name="share_action">Share current page</string>
    <string name="share_action_subject">Facebook page</string>
    <string name="folio_video">Upload video</string>
    <string name="folio_checkins">Check-in</string>
    <string name="folio_tags">Tag a friend</string>
    <string name="folio_images">Upload image from gallery</string>
    <string name="update_share">Share Now</string>
    <string name="update_status">Post Status</string>
    <string name="update_photo">Add Photos</string>
    <string name="show_fab">Display a FAB</string>
    <string name="show_fab_hint">Display a floating action button at bottom right of screen.</string>
    <string name="quickaccess">Quick Access</string>
    <string name="newsfeed">News Feed</string>
    <string name="topnews">Notes</string>
    <string name="fbmenu">Facebook Menu</string>
    <string name="trending">Trending</string>
    <string name="messages">Messages</string>
    <string name="faved">Favorites</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="pages">Pages</string>
    <string name="photos">Photos</string>
    <string name="reminders">Reminders</string>
    <string name="events">Events</string>
    <string name="onthisday">On This Day</string>
    <string name="saved">Saved</string>
    <string name="prefs">Preferences</string>
    <string name="settings">Settings</string>
    <string name="helpfeed">Feedback</string>
    <string name="bugs">Report A Bug</string>
    <string name="switch_to_folio">Switch to Folio</string>
    <string name="switch_to_gplus">Switch to Google+</string>
    <string name="switch_to_gram">Switch to Instagram</string>
    <string name="switch_to_tum">Switch to Tumblr</string>
    <string name="addons">Social Add-ons</string>
    <string name="enable_google">Remove Google+</string>
    <string name="enable_instagram">Remove Instagram</string>
    <string name="enable_tumblr">Remove Tumblr</string>
    <string name="navigation_pref">Navigation Drawer Items</string>
    <string name="navigation_pref_hint">Customize the navigation drawer by removing items you don\'t use.</string>
    <string name="recent_nav">Remove News Feed</string>
    <string name="top_nav">Remove Notes</string>
    <string name="trending_nav">Remove Trending</string>
    <string name="friends_nav">Remove Friends</string>
    <string name="groups_nav">Remove Groups</string>
    <string name="pages_nav">Remove Pages</string>
    <string name="photos_nav">Remove Photos</string>
    <string name="events_nav">Remove Events</string>
    <string name="onday_nav">Remove On This Day</string>
    <string name="saved_nav">Remove Saved</string>
    <string name="news_feed_preferences">News Feed Preference</string>
    <string name="feed_choice">Sort News Feed By</string>
    <string name="feed_choice_hint">Current sort: %s.</string>
    <string-array name="pref_default_feed">
        <item>Default (Fast to load)</item>
        <item>Most Recent (Slow to load)</item>
        <item>Top News (Slow to load)</item>
    </string-array>
    <string name="choose_font_facebook">Facebook Font Size</string>
    <string name="choose_font_facebook_hint">Current font size: %s</string>
    <string name="font_preference">Facebook Font Preference</string>
    <string-array name="font_choice">
        <item>Default Font</item>
        <item>Small Font</item>
        <item>Medium Font</item>
        <item>Large Font</item>
        <item>XLarge Font</item>
        <item>XXLarge Font</item>
    </string-array>
    <string name="top">Jump To Top</string>
    <string name="fb_settings">Facebook Settings</string>
    <string name="fb_chat">Active Friends</string>
    <string name="fb_recent">Most Recent</string>
    <string name="refresh">Refresh</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_about_hint">Setup notifications.</string>
    <string name="search">Search Facebook</string>
    <string name="end">Log out</string>
    <string name="exit">Close</string>
    <string name="customize_folio">Customize Folio</string>
    <string name="customize_folio_hint">Change look and layout.</string>
    <string name="preferences_auto">Disable Facebook Bar</string>
    <string name="preferences_auto_hint">This turns on the Folio Toolbar.</string>
    <string name="hidden_bar">Disable Folio Toolbar</string>
    <string name="hidden_bar_hint">Only use the Facebook Bar. Please turn off the Folio Toolbar first.</string>
    <string name="choose_theme_folio">Choose App Theme</string>
    <string name="choose_theme_facebook">Choose Facebook Theme</string>
    <string name="choose_theme_facebook_hint">Current theme: %s</string>
    <string name="choose_theme_folio_hint">Current theme: %s</string>
    <string name="preference_category7">Customizations</string>
    <string name="preference_category4">Folio Themes</string>
    <string name="preference_category15">Folio Layout Settings</string>
    <string name="preference_facebook_layouts">Facebook Layout Settings</string>
    <string name="preference_category3">Facebook Themes</string>
    <string-array name="pref_theme_entries">
    <item>Folio Theme</item>
    <item>Pink Theme</item>
    <item>Dark Theme</item>
    <item>Blue Grey Theme</item>
    </string-array>
    <string-array name="pref_theme_fb_entries">
    <item>Facebook Theme</item>
    <item>Black Theme</item>
    <item>Dracula Theme</item>
    <item>Folio Theme</item>
    </string-array>
    <string name="fb_offline">Error</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="image_chooser">Image Chooser</string>
    <string name="donate_jorell">Support Development &amp; Unlock Features</string>
    <string name="preference_donate_category">Purchase Folio Pro</string>
    <string name="preferences_feedback">Send Feedback</string>
    <string name="preferences_rate_description">Rate Folio</string>
    <string name="clear_cache">Clear Data</string>
    <string name="clear_cache_title">Are you sure?</string>
    <string name="clear_cache_message">Tap OK to clear Folio\'s data. This will also log you out.</string>
    <string name="clear_cache_description">Clear Folio\'s data. This will also log you out.</string>
    <string name="people_you">People You May Know</string>
    <string name="people_you_hint">Hide people you may know. (BETA)</string>
    <string name="open_link_title">Chrome Custom Tabs</string>
    <string name="open_link_hint">Open external links in Chrome Custom Tabs?</string>
    <string name="addPage">Add to Favorites</string>
    <string name="removePage">Remove from Favorites</string>
    <string name="preference_category5">General</string>
    <string name="get_key">https://play.google.com/store/apps/details?id=com.creativetrends.folio.app.key</string>
    <string name="get_app_store">https://play.google.com/store/apps/details?id=com.creativetrends.folio.app</string>
    <string name="no_images">Disable Images</string>
    <string name="no_images_hint">Reduce data usage by removing images.</string>
    <string name="credits_settings">Credits</string>
    <string name="credits_licenses">Tap here to read more about the licences used in Folio.</string>
    <string name="credits_licenses_description">Open source software licenses</string>
    <string name="preference_category6">Credits</string>
    <string name="credits_bejan">Bejan Kanga</string>
    <string name="credits_bejan_description">For launcher icons for Folio &amp; Folio Messenger. Also some navigation drawer icons. Also help with development on portions of the original app FrontPage. Tap here to visit his website.</string>
    <string name="credits_bejan_link" translatable="true">http://bejank.com</string>
    <string name="credits_nam">Nam Nghiem</string>
    <string name="credits_nam_description">For help with cover photos.</string>
    <string name="credits_nam_link" translatable="true">https://play.google.com/store/apps/details?id=com.nam.fbwrappe&amp;hl=en</string>
    <string name="credits_fadev">Florent Anders</string>
    <string name="credits_fadev_description">For help with Folio Lock.</string>
    <string name="credits_fadev_link" translatable="true">https://play.google.com/store/apps/details?id=com.fa.touch.app&amp;hl=en</string>
    <string name="credits_beta">Facebook Group</string>
    <string name="credits_beta_description">Join Creative Trends on Facebook.</string>
    <string name="credits_beta_link" translatable="true">https://www.facebook.com/groups/creativtrendz/</string>
    <string name="credits_google_plus">Google+</string>
    <string name="credits_google_plus_description">Join Creative Trends on Google+</string>
    <string name="credits_google_plus_link" translatable="true">https://plus.google.com/communities/116238843585710616103</string>
    <string name="credits_janae">Janae</string>
    <string name="credits_janae_description">For sharing an interest in technology and being patient while daddy worked.</string>
    <string name="credits_tykeshia">Tykeshia</string>
    <string name="credits_tykeshia_description">For being supportive and encouraging throughout the past years. Thanks for letting me borrow the laptop.</string>
    <string name="credits_facebook">Facebook Inc.</string>
    <string name="credits_facebook_description">For their new graph api. Also for their mobile site which is used in Folio. </string>
    <string name="credits_facebook_link" translatable="true">http://m.facebook.com</string>
    <string name="credits_google">Google Inc.</string>
    <string name="credits_google_description">For AppCompat v7, also for open sourcing your Material Design icons.</string>
    <string name="help_trans">Help Translate</string>
    <string name="notifications_settings">Notifications</string>
    <string name="folio_lock">Enable Folio Lock</string>
    <string name="lock_abort">Cancel</string>
    <string name="lock_pin">lock code</string>
    <string name="lock_text">Secure Folio with a lock code</string>
    <string name="lock_confirm">confirm lock code</string>
    <string name="ads_folio">Show Apps &amp; Games</string>
    <string name="ads_folio_des">Display apps &amp; games at launch that may be of interest to you? Apps &amp; games can be turned off at anytime.</string>
</resources>