<?xml version="1.0" encoding="utf-8"?>
<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    
    <!-- Blank for a reason -->
   	<!-- Copyright (C) 2014-2015 Jorell Rutledge/Creative Trends.
	This file is originally apart of Folio for Facebook.
	Copyright notice must remain here if you're using any part of this code.-->



    <item
        android:id="@+id/rate_folio"
        android:title="@string/preferences_rate_description"
        android:icon="@drawable/ic_rate"
        android:orderInCategory="3"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
	      
    	<item 
        android:id="@+id/settings_feedback"
        android:title="@string/helpfeed"
        android:icon="@drawable/sidebar_feedback"
        android:orderInCategory="2"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction"/>
        
     
    	<item 
        android:id="@+id/settings_bugs"
       	android:title="@string/bugs"
       	android:icon="@drawable/sidebar_bugs"
       	android:orderInCategory="1"
       	app:showAsAction="never" />

</menu>
